// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GalleryStyles [GalleryContainer] Component basic tests matches the snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  overflow-x: hidden;
  position: relative;
  left: 0px;
  right: 0px;
  margin: 0px 10px;
}

.c0::after {
  content: '';
  -webkit-box-flex: 999999999;
  -webkit-flex-grow: 999999999;
  -ms-flex-positive: 999999999;
  flex-grow: 999999999;
  height: 0;
}

<div
  className="c0"
/>
`;

exports[`GalleryStyles [GalleryItem - disabled:default] Component basic tests matches the snapshot 1`] = `
.c0 {
  margin: 1px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 200px;
  pointer-events: initial;
}

@media only screen and (max-width:600px) {
  .c0 {
    height: 100px;
  }
}

<div
  className="c0"
/>
`;

exports[`GalleryStyles [GalleryItem - disabled=false] Component basic tests matches the snapshot 1`] = `
.c0 {
  margin: 1px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 200px;
  pointer-events: initial;
}

@media only screen and (max-width:600px) {
  .c0 {
    height: 100px;
  }
}

<div
  className="c0"
  disabled={false}
/>
`;

exports[`GalleryStyles [GalleryItem - disabled=true] Component basic tests matches the snapshot 1`] = `
.c0 {
  margin: 1px;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 200px;
  pointer-events: none;
}

@media only screen and (max-width:600px) {
  .c0 {
    height: 100px;
  }
}

<div
  className="c0"
  disabled={true}
/>
`;

exports[`GalleryStyles [GalleryItemImg] Component basic tests matches the snapshot 1`] = `
.c0 {
  object-fit: cover;
  min-width: 100%;
  height: 100%;
}

<img
  className="c0"
/>
`;

exports[`GalleryStyles [GalleryItemPicture - visible=false] Component basic tests matches the snapshot 1`] = `
.c0 {
  opacity: 1;
  position: relative;
  -webkit-transition: opacity 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out;
  min-width: 100%;
  position: absolute;
  opacity: 0;
}

<picture
  className="c0"
/>
`;

exports[`GalleryStyles [GalleryItemPicture - visible=true] Component basic tests matches the snapshot 1`] = `
.c0 {
  opacity: 1;
  position: relative;
  -webkit-transition: opacity 0.2s ease-in-out;
  transition: opacity 0.2s ease-in-out;
  min-width: 100%;
}

<picture
  className="c0"
/>
`;

exports[`GalleryStyles [ItemLoadingPlaceholder] Component basic tests matches the snapshot 1`] = `
.c0 {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-width: 500px;
  width: 100%;
  height: 100%;
}

@media only screen and (max-width:600px) {
  .c0 {
    min-width: 200px;
  }
}

<div
  className="c0"
/>
`;
